<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory 
		android:title="@string/rule_setting_title"
		android:key="settings">
		
		<CheckBoxPreference 
			android:key="RULE_ENABLED"
			android:title="@string/rule_setting_enable" 
			android:summary="@string/rule_setting_enable_desc"
			android:defaultValue="true"
			/>
		
		<EditTextPreference
			android:key="RULE_FILTER"
			android:title="@string/rule_setting_filter" 
			android:summary="@string/rule_setting_filter_desc"
			android:dialogTitle="@string/rule_setting_filter"
			android:dependency="RULE_ENABLED"
		/>
			
		<ListPreference 
			android:key="RULE_TYPE"
			android:title="@string/rule_setting_type"
			android:summary="@string/rule_setting_type_desc"
			android:entries="@array/ruleTypeDesc"
    		android:entryValues="@array/ruleType"
			android:dependency="RULE_ENABLED" 
			/>	
		
		
		<EditTextPreference
			android:key="RULE_ACTION"
			android:visibility="gone"
			android:title="@string/rule_setting_action"
			android:summary="@string/rule_setting_action_desc"
			android:dialogTitle="@string/rule_setting_action_desc"
			android:inputType="number"
			android:dependency="RULE_ENABLED"
		/>
			
	</PreferenceCategory>
</PreferenceScreen>