<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory 
		android:title="@string/setting_title"
		android:key="settings">
		
		<CheckBoxPreference 
			android:key="SETTINGS_NOTICE_ENABLED"
			android:summary="@string/setting_notice_enable_desc"
			android:title="@string/setting_notice_enable" 
			android:defaultValue="true"
			/>
		
		<CheckBoxPreference 
			android:key="SETTINGS_TOAST_ENABLED"
			android:title="@string/setting_toast_enable"
			android:summary="@string/setting_toast_enable_desc" 
			android:defaultValue="true"
			android:dependency="SETTINGS_NOTICE_ENABLED"
			/>
		
		<RingtonePreference
		    android:key="SETTINGS_RINGTONE"
		    android:title="@string/setting_ringtone"
		    android:summary="@string/setting_ringtone_desc"
			android:dependency="SETTINGS_NOTICE_ENABLED"
			android:showSilent="false"
			/>
			
	</PreferenceCategory>
</PreferenceScreen>